--- a/package.json
+++ b/package.json
@@ -17,12 +17,23 @@
   },
   "homepage": "https://github.com/1337hero/gulp-starter#readme",
   "devDependencies": {
+    "bootstrap": "^4.1.1",
+    "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-inject-partials": "^1.0.4",
+    "gulp-js-import": "^1.0.6",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jquery": "^3.3.1"
+  },
+  "dependencies": {
+    "tether": "^1.4.4"
   }
 }
