--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "gulp-starter",
+  "name": "1337Hero's Gulp Static Starter Workflow",
   "version": "2.0.0",
-  "description": "Code for my Gulp Project Starter",
+  "description": "Installer Package for Gulp workflow",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/1337hero/gulp-starter.git"
-  },
-  "author": "1337 Hero",
+  "author": "1337hero",
   "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/1337hero/gulp-starter/issues"
-  },
-  "homepage": "https://github.com/1337hero/gulp-starter#readme",
+  "homepage": "https://github.com/1337hero/gulp-starter/blob/master/readme.md",
+  "dependencies": {},
   "devDependencies": {
-    "bootstrap": "^4.1.1",
-    "browser-sync": "^2.24.5",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.4",
+    "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.28.3",
+    "cssnano": "^5.1.15",
+    "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.3",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-inject-partials": "^1.0.4",
+    "gulp-gzip": "^1.4.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-inject-partials": "^1.0.5",
     "gulp-js-import": "^1.0.6",
-    "gulp-rename": "^1.3.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.3.1"
+    "gulp-nunjucks-render": "^2.2.3",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1",
+    "gulp-webp": "^4.0.1",
+    "gulp-webpcss": "^1.1.1",
+    "sass": "^1.59.2"
   },
-  "dependencies": {
-    "tether": "^1.4.4"
-  }
+  "keywords": []
 }
